# OOP-HomeWork

./: sem2.cpp  sem3.cpp  sem4.cpp
sem5/: CMakeLists.txt  Time.cpp  Time.hpp  main.cpp
sem5/googletests/lib/: gtest_main.lib
sem5/tests/: test_time.cpp
